[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/homeScreens/playScreen/RealGameScene.gd" type="Script" id=1]
[ext_resource path="res://assets/playerObjsAndMaterials/imgs/body2.png" type="Texture" id=2]
[ext_resource path="res://assets/playerObjsAndMaterials/imgs/body3.png" type="Texture" id=3]
[ext_resource path="res://assets/playerObjsAndMaterials/imgs/body1.png" type="Texture" id=4]
[ext_resource path="res://assets/playerObjsAndMaterials/imgs/body4.png" type="Texture" id=5]
[ext_resource path="res://assets/playerObjsAndMaterials/imgs/body5.png" type="Texture" id=6]
[ext_resource path="res://assets/playerObjsAndMaterials/imgs/body0.png" type="Texture" id=7]
[ext_resource path="res://src/homeScreens/playScreen/comps/BodyAddonsCarousel.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/homeScreens/playScreen/comps/GunCarousel.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/homeScreens/playScreen/comps/WorldModifications.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/homeScreens/BaseButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/texts/42size.tres" type="DynamicFont" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="RealGameScene" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1501.43, 484.096 )
scale = Vector2( 11.2118, 11.2118 )
frames = SubResource( 1 )
playing = true

[node name="BodyAddonsCarousel" parent="." instance=ExtResource( 8 )]
position = Vector2( 38.0976, 106.468 )

[node name="GunCarousel" parent="." instance=ExtResource( 9 )]
position = Vector2( 38.0976, 342.424 )

[node name="WorldModifications" parent="." instance=ExtResource( 10 )]
position = Vector2( 38.0976, 584.716 )

[node name="play" parent="." instance=ExtResource( 11 )]
margin_left = 1087.45
margin_top = 598.718
margin_right = 1206.45
margin_bottom = 671.718
text = "Play"

[node name="funLabel" type="Label" parent="."]
margin_left = 879.273
margin_top = 46.9098
margin_right = 1233.27
margin_bottom = 291.91
custom_fonts/font = ExtResource( 12 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
